tests/snapshots/sfc/ts/script_setup__basic_script_setup.snap
---
source: crates/vize_compiler_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {

const msg = 'hello'

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(msg)))
}
}

})
