tests/snapshots/sfc/ts/script_setup__computed_with_route_params.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { computed } from 'vue'
import { useRoute } from 'vue-router'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const route = useRoute();
const studentId = computed(() =>
  route.params.studentId ? parseInt(route.params.studentId) : null
);

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(studentId.value), 1 /* TEXT */))
}
}

})
